[gd_scene load_steps=10 format=2]

[ext_resource path="res://Demo_Rig.gd" type="Script" id=1]
[ext_resource path="res://mdl/Demo_rig.tres" type="ArrayMesh" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 1.46829

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.478431, 0.478431, 0.478431, 1 )

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0, 0, 0, 1 )
roughness = 0.0

[sub_resource type="Shader" id=10]
code = "/*
	蜃気楼シェーダー by あるる（きのもと 結衣）
	Heat haze shader by Yui Kinomoto @arlez80

	MIT License
*/
shader_type spatial;
render_mode unshaded;

uniform float max_shift = 2.5;
uniform float speed = 0.03;
uniform float min_heathaze_dist = 0.99;

float random( vec2 pos )
{ 
	return fract(sin(dot(pos, vec2(12.9898,78.233))) * 43758.5453);
}

float noise( vec2 pos )
{
	return random( floor( pos ) );
}

float value_noise( vec2 pos )
{
	vec2 p = floor( pos );
	vec2 f = fract( pos );

	float v00 = noise( p + vec2( 0.0, 0.0 ) );
	float v10 = noise( p + vec2( 1.0, 0.0 ) );
	float v01 = noise( p + vec2( 0.0, 1.0 ) );
	float v11 = noise( p + vec2( 1.0, 1.0 ) );

	vec2 u = f * f * ( 3.0 - 2.0 * f );

	return mix( mix( v00, v10, u.x ), mix( v01, v11, u.x ), u.y );
}

void fragment( )
{
	float depth = max( texture( DEPTH_TEXTURE, SCREEN_UV ).r - min_heathaze_dist, 0.0 );
	vec2 uv_r = SCREEN_UV + vec2( TIME * speed, 0.0 );
	vec2 uv_g = SCREEN_UV + vec2( -10.0, -TIME * speed );
	vec2 shift = vec2(
		sin(
				value_noise( uv_r * 8.0 ) * 0.2
			+	value_noise( uv_r * 16.0 ) * 0.2
			+	value_noise( uv_r * 32.0 ) * 0.2
			+	value_noise( uv_r * 64.0 ) * 0.2
			+	value_noise( uv_r * 128.0 ) * 0.2
		) - 0.5
	,	sin(
			value_noise( uv_g * 8.0 ) * 0.2
		+	value_noise( uv_g * 16.0 ) * 0.2
		+	value_noise( uv_g * 32.0 ) * 0.2
		+	value_noise( uv_g * 64.0 ) * 0.2
		+	value_noise( uv_g * 128.0 ) * 0.2
		) - 0.5
	) * ( depth * max_shift );
	ALBEDO = texture( SCREEN_TEXTURE, SCREEN_UV + shift ).rgb;
	float depth_shifted = texture( DEPTH_TEXTURE, SCREEN_UV + shift ).r - min_heathaze_dist;

	ALPHA = float( 0.0 < depth_shifted );
	DEPTH = 0.0;
}
"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 10 )
shader_param/max_shift = 2.5
shader_param/speed = 0.03
shader_param/min_heathaze_dist = 0.99

[sub_resource type="SphereMesh" id=9]
material = SubResource( 8 )
flip_faces = true
radius = 3.0
height = 6.0

[node name="Demo_Rig" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( -4.37114e-08, 1.62921e-07, 1, 1, 7.1215e-15, 4.37114e-08, 0, 1, -1.62921e-07, 0.672469, -0.204294, -0.460222 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 9.97788e-08, 0.899, 0, 0.837, -1.0717e-07, -1, -4.36147e-15, -3.92965e-08, 0.42947, 0, -0.45571 )
mesh = ExtResource( 2 )
material/0 = SubResource( 2 )

[node name="Crosshair" type="Label3D" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 2.27773e-22, 0, 2.27773e-22, 1, 1.19209e-07, -1.44166e-07, -1.20934 )
no_depth_test = true
modulate = Color( 0, 1, 0.647059, 1 )
text = "+"

[node name="X_display" type="Label3D" parent="MeshInstance"]
transform = Transform( 0.5, -8.47032e-22, 1.77636e-14, 8.47033e-22, 0.5, -3.90799e-14, -1.77636e-14, 3.90799e-14, 0.5, -0.0443239, -1.44166e-07, -1.20934 )
no_depth_test = true
modulate = Color( 0, 1, 0.647059, 1 )
text = "10"
horizontal_alignment = 2

[node name="Y_display" type="Label3D" parent="MeshInstance"]
transform = Transform( 0.5, 6.35275e-22, 1.06581e-14, 2.11758e-22, 0.5, -3.55271e-14, -1.24345e-14, 2.84217e-14, 0.5, 0.0306376, -1.44166e-07, -1.20934 )
no_depth_test = true
modulate = Color( 0, 1, 0.647059, 1 )
text = "10"
horizontal_alignment = 0

[node name="Z_display" type="Label3D" parent="MeshInstance"]
transform = Transform( 0.5, 6.35275e-22, 1.42109e-14, 4.23516e-22, 0.5, -4.26326e-14, -1.42109e-14, 3.19744e-14, 0.5, -0.0050292, -0.0718217, -1.20934 )
no_depth_test = true
modulate = Color( 0, 1, 0.647059, 1 )
text = "10"

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( -0.0828082, 0.127094, 0.988428, 0, 0.991834, -0.127532, -0.996566, -0.0105607, -0.082132, 0.42947, -1.9375, -1.61031 )
shadow_enabled = true
spot_range = 50.0
spot_attenuation = 2.14355
spot_angle = 17.883
spot_angle_attenuation = 0.392292

[node name="SpotLight2" type="SpotLight" parent="."]
transform = Transform( 0.0865993, 0.147134, 0.985318, 0, 0.989034, -0.147689, -0.996243, 0.0127897, 0.0856496, 0.42947, -1.9375, 0.72513 )
shadow_enabled = true
spot_range = 50.0
spot_attenuation = 2.14355
spot_angle = 17.883
spot_angle_attenuation = 0.5

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.32491, 0.805479, -0.45571 )
light_energy = 0.3
shadow_enabled = true
omni_range = 3.64694

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( -1.49799e-08, -0.136667, 0.26645, -9.01724e-09, 0.22704, 0.160391, -0.4, -5.16057e-15, -1.35942e-08, -0.333461, -0.728842, -0.447802 )
mesh = SubResource( 3 )
skeleton = NodePath("../speed")
material/0 = SubResource( 4 )

[node name="speed" type="Label3D" parent="."]
transform = Transform( -1.50707e-08, -0.257863, 0.428377, -1.12716e-08, 0.428377, 0.257863, -0.5, -1.88457e-09, -1.87249e-08, -0.175739, -0.391939, -0.0632824 )
cast_shadow = 0
no_depth_test = true
modulate = Color( 0, 1, 0.647059, 1 )
text = "THRUST: 12"
horizontal_alignment = 0

[node name="Camera" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Camera"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.615, 0.001, -0.461 )
current = true
fov = 90.0
far = 1e+06

[node name="Blur" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.619877, 0, 0 )
mesh = SubResource( 9 )
